--- a/templates/site/catalog.html.twig
+++ b/templates/site/catalog.html.twig
@@ -128,6 +128,7 @@
                             </h3>
                             <p><b>Miasto:</b>{{ hall.city }}</p>
                             <p><b>Adresa:</b>{{ hall.address }}</p>
+                            <p><b>Pole powierzchni:</b>{{ hall.area }} m2</p>
                             <div class="btn-group-sm">
                                 {% if hall.id not in basketItems %}
                                     <a href="#"
