--- a/templates/basket/index.html.twig
+++ b/templates/basket/index.html.twig
@@ -39,7 +39,7 @@
                                 </a>
                             </h3>
                             <p><b>Miasto:</b>{{ hall.city }}</p>
-                            <p><b>Adresa:</b>{{ hall.address }}</p>
+                            <p><b>Adres:</b>{{ hall.address }}</p>
                             <div class="btn-group-sm">
                                 <a href="#"
                                    data-id="{{ hall.id }}"
@@ -48,7 +48,7 @@
                                     Usuń z koszyka
                                 </a>
                                 <a href="{{ path('item', {id: hall.id}) }}" class="btn btn-success btn-sm">
-                                    Zobacz
+                                    Zobać
                                 </a>
                                 <a href="{{ path('book', {id: hall.id}) }}" class="btn btn-primary btn-sm">
                                     Rezerwuj
