--- a/templates/halls/list.html.twig
+++ b/templates/halls/list.html.twig
@@ -17,7 +17,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Nazwa</th>
                 <th scope="col">Miasto</th>
-                <th scope="col">Adresa</th>
+                <th scope="col">Adres</th>
                 <th scope="col">Powierzchnia</th>
                 <th scope="col"></th>
             </tr>
