--- a/templates/halls/update.html.twig
+++ b/templates/halls/update.html.twig
@@ -17,9 +17,9 @@
                     </div>
                 </div>
                 <div class="form-row">
-                    <label class="col-md-3" for="address">Adresa</label>
+                    <label class="col-md-3" for="address">Adres</label>
                     <div class="col-md-9 mb-3">
-                        <input id="address" type="text" name="address" value="{{ hall.adresa }}" class="form-control" placeholder="Adresa" required="" />
+                        <input id="address" type="text" name="address" value="{{ hall.Adres }}" class="form-control" placeholder="Adres" required="" />
                     </div>
                 </div>
                 <div class="form-row">
