--- a/templates/site/item.html.twig
+++ b/templates/site/item.html.twig
@@ -43,7 +43,7 @@
                 </a>
             </div>
             <p><b>Miasto:</b>{{ hall.city }}</p>
-            <p><b>Adresa:</b>{{ hall.address }}</p>
+            <p><b>Adres:</b>{{ hall.address }}</p>
             <p><b>Pole powierzchni:</b>{{ hall.area }} m2</p>
             <p><b>Opcje:</b></p>
             <ul class="list-group">
