--- a/templates/halls/add.html.twig
+++ b/templates/halls/add.html.twig
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-row">
                     <div class="col-md-12 mb-3">
-                        <input type="text" name="address" class="form-control" placeholder="Adresa" required="" />
+                        <input type="text" name="address" class="form-control" placeholder="Adres" required="" />
                     </div>
                 </div>
                 <div class="form-row">
