--- a/templates/layout/default.html.twig
+++ b/templates/layout/default.html.twig
@@ -5,7 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Hall booking - aplikacja do rezerwacji sal</title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png" />
+
     <link rel="stylesheet" href="{{ asset('build/app.css') }}">
 </head>
 <body>
@@ -24,7 +26,7 @@
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('catalog') }}">Catalog</a>
+                <a class="nav-link" href="{{ path('catalog') }}">Katalog</a>
             </li>
             <li class="nav-item">
                 <a href="{{ path('basket') }}" class="nav-link">Koszyk</a>
@@ -62,7 +64,7 @@
                 <div class="col-sm">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('catalog') }}">Catalog</a>
+                            <a class="nav-link" href="{{ path('catalog') }}">Katalog</a>
                         </li>
                         <li class="nav-item">
                             <a href="{{ path('basket') }}" class="nav-link">Koszyk</a>
