--- a/templates/site/catalog.html.twig
+++ b/templates/site/catalog.html.twig
@@ -127,7 +127,7 @@
                                 </a>
                             </h3>
                             <p><b>Miasto:</b>{{ hall.city }}</p>
-                            <p><b>Adresa:</b>{{ hall.address }}</p>
+                            <p><b>Adres:</b>{{ hall.address }}</p>
                             <p><b>Pole powierzchni:</b>{{ hall.area }} m2</p>
                             <div class="btn-group-sm">
                                 {% if hall.id not in basketItems %}
@@ -140,7 +140,7 @@
                                 {% endif %}
 
                                 <a href="{{ path('item', {id: hall.id}) }}" class="btn btn-success btn-sm">
-                                    Zobacz
+                                    Zobać
                                 </a>
 
                                 <a href="{{ path('book', {id: hall.id}) }}" class="btn btn-primary btn-sm">
