--- a/templates/halls/update.html.twig
+++ b/templates/halls/update.html.twig
@@ -1,53 +1,59 @@
 {%  extends 'layout/default.html.twig' %}
 {% block body %}
     <div class="container">
-        <h3>Edycja sali "{{ hall.nazwa }}"</h3>
-        <div class="login-form">
-            <form method="post" action="{{ path('hall_update', {id: hall.id}) }}">
-                <div class="form-row">
-                    <label class="col-md-3" for="name">Nazwa</label>
-                    <div class="col-md-9 mb-3">
-                        <input id="name" type="text" name="name" value="{{ hall.nazwa }}" class="form-control" placeholder="Nazwa" required="" />
-                    </div>
-                </div>
-                <div class="form-row">
-                    <label class="col-md-3" for="city">Miasto</label>
-                    <div class="col-md-9 mb-3">
-                        <input id="city" type="text" name="city" value="{{ hall.miasto }}" class="form-control" placeholder="Miasto" required="" />
-                    </div>
-                </div>
-                <div class="form-row">
-                    <label class="col-md-3" for="address">Adres</label>
-                    <div class="col-md-9 mb-3">
-                        <input id="address" type="text" name="address" value="{{ hall.Adres }}" class="form-control" placeholder="Adres" required="" />
-                    </div>
-                </div>
-                <div class="form-row">
-                    <label class="col-md-3" for="area">Pole powierzchni</label>
-                    <div class="col-md-9 mb-3">
-                        <input id="area" type="text" name="area" value="{{ hall.powierzchnia }}" class="form-control" placeholder="Pole powierzchni" required="" />
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <label class="col-md-3" for="area">Opcje</label>
-                    <div class="col-md-9 mb-3">
-                        {% for option in options %}
-                            <div class="custom-control custom-checkbox">
-                                <input value="{{ option.id }}" type="checkbox" name="options[]" {% if option.id in checkedOption %}checked="checked"{% endif %} class="custom-control-input" id="option{{ option.id }}">
-                                <label class="custom-control-label" for="option{{ option.id }}">{{ option.nazwa }}</label>
+        <div class="card">
+            <div class="card-header">
+                <h3>Edycja sali "{{ hall.name }}"</h3>
+            </div>
+            <div class="card-body">
+                <div class="login-form">
+                    <form method="post" action="{{ path('hall_update', {id: hall.id}) }}">
+                        <div class="form-row row">
+                            <label class="col-md-3" for="name">Nazwa</label>
+                            <div class="col-md-9 mb-3">
+                                <input id="name" type="text" name="name" value="{{ hall.name }}" class="form-control" placeholder="Nazwa" required="" />
                             </div>
-                        {% endfor %}
-                    </div>
+                        </div>
+                        <div class="form-row row">
+                            <label class="col-md-3" for="city">Miasto</label>
+                            <div class="col-md-9 mb-3">
+                                <input id="city" type="text" name="city" value="{{ hall.city }}" class="form-control" placeholder="Miasto" required="" />
+                            </div>
+                        </div>
+                        <div class="form-row row">
+                            <label class="col-md-3" for="address">Adres</label>
+                            <div class="col-md-9 mb-3">
+                                <input id="address" type="text" name="address" value="{{ hall.address }}" class="form-control" placeholder="Adres" required="" />
+                            </div>
+                        </div>
+                        <div class="form-row row">
+                            <label class="col-md-3" for="area">Pole powierzchni</label>
+                            <div class="col-md-9 mb-3">
+                                <input id="area" type="text" name="area" value="{{ hall.area }}" class="form-control" placeholder="Pole powierzchni" required="" />
+                            </div>
+                        </div>
+
+                        <div class="form-row row">
+                            <label class="col-md-3" for="area">Opcje</label>
+                            <div class="col-md-9 mb-3">
+                                {% for option in options %}
+                                    <div class="custom-control custom-checkbox">
+                                        <input value="{{ option.id }}" type="checkbox" name="options[]" {% if option.id in checkedOption %}checked="checked"{% endif %} class="custom-control-input" id="option{{ option.id }}">
+                                        <label class="custom-control-label" for="option{{ option.id }}">{{ option.name }}</label>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+
+                        <div class="form-footer">
+                            <button onclick="window.history.back();" class="btn btn-lg">
+                                Wstecz
+                            </button>
+                            <button class="btn btn-primary btn-lg" type="submit">Zapisz</button>
+                        </div>
+                    </form>
                 </div>
-
-
-
-
-                <div class="form-footer">
-                    <button class="btn btn-primary btn-lg" type="submit">Zapisz zmiany</button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 {% endblock %}
