--- a/templates/options/list.html.twig
+++ b/templates/options/list.html.twig
@@ -10,6 +10,9 @@
                     <a href="{{ path('option_add') }}" class="btn btn-success btn-lg">
                         Dodaj opcje
                     </a>
+                    <a href="{{ path('account') }}" class="btn btn-dark btn-lg">
+                        Wstecz
+                    </a>
                 </div>
                 <table class="table table-borderless">
                     <thead class="">
