--- a/templates/site/book.html.twig
+++ b/templates/site/book.html.twig
@@ -135,10 +135,10 @@
                 </div>
                 <div class="form-row row">
                     <label for="peopleCount" class="col-sm-2 col-form-label">
-                        Ilość osób
+                        Liczba osób
                     </label>
                     <div class="col-md-10 mb-3">
-                        <input type="text" name="peopleCount" class="form-control" placeholder="Ilość osób" />
+                        <input type="text" name="peopleCount" class="form-control" placeholder="Liczba osób" />
                     </div>
                 </div>
 
