--- a/templates/bookings/list.html.twig
+++ b/templates/bookings/list.html.twig
@@ -6,13 +6,67 @@
                 <h3>Rezerwacje</h3>
             </div>
             <div class="card-body">
+                <div class="btn-group btn-group-toggle mb-2">
+                    <a href="{{ path('account') }}" class="btn btn-dark btn-lg">
+                        Wstecz
+                    </a>
+                    {% if not bookings is empty %}
+                        <a id="print-booking-report" href="#" class="btn btn-success btn-lg">
+                            Drukuj raport
+                        </a>
+                    {% endif %}
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <form>
+                            <div class="form-row">
+                                <div class="col-md-2 col-form-label">
+                                    Filtrowanie:
+                                </div>
+                                <div class="form-group row col-md-4">
+                                    <label for="sort-halls" class="col-md-4 col-form-label text-right">Data od:</label>
+                                    <div class="col-md-8">
+                                        <input type="date"
+                                               name="date[from]"
+                                               class="form-control"
+                                                {% if filter.dateFrom %}
+                                                    value="{{ filter.dateFrom|date("Y-m-d") }}"
+                                                {% endif %}
+                                               id="dateFrom"
+                                               placeholder="od"
+                                        />
+                                    </div>
+                                </div>
+                                <div class="form-group row col-md-4">
+                                    <label for="sort-halls" class="col-md-4 col-form-label text-right">Data do:</label>
+                                    <div class="col-md-8">
+                                        <input type="date"
+                                               name="date[to]"
+                                                {% if filter.dateTo %}
+                                                    value="{{ filter.dateTo|date("Y-m-d") }}"
+                                                {% endif %}
+                                               class="form-control"
+                                               id="dateTo"
+                                               placeholder="do"
+                                        />
+                                    </div>
+                                </div>
+                                <div class="сol-auto">
+                                    <button type="submit" class="btn btn-primary">
+                                        Zastosuj
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
                 <table class="table table-borderless">
                     <thead>
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Sala</th>
                         <th scope="col">Data</th>
-                        <th scope="col">Ilość osób</th>
+                        <th scope="col">Liczba osób</th>
                         <th scope="col">Komentarz</th>
                         <th scope="col">Klient</th>
                         <th scope="col"></th>
@@ -27,14 +81,16 @@
                             <td>{{ booking.peoplesCount }}</td>
                             <td>{{ booking.comment }}</td>
                             <td>
-                                <span><i>Imie</i>: {{ booking.client.firstName }}</span><br />
+                                <span><i>Imię</i>: {{ booking.client.firstName }}</span><br />
                                 <span><i>Telefon</i>: {{ booking.client.phone }}</span><br />
-                                <span><i>Poczta</i>: {{ booking.client.email }}</span>
+                                <span><i>E-mail</i>: {{ booking.client.email }}</span>
                             </td>
                             <td>
-                                <a href="{{ path('booking_confirm', {id: booking.id}) }}" class="btn btn-success btn-xs">
-                                    Potwierdź
-                                </a>
+                                {% if app.user.role == 'EMPLOYEE_ROLE' %}
+                                    <a href="{{ path('booking_confirm', {id: booking.id}) }}" class="btn btn-success btn-xs">
+                                        Potwierdź
+                                    </a>
+                                {% endif %}
                             </td>
                         </tr>
                     {% endfor %}
