--- a/templates/halls/add.html.twig
+++ b/templates/halls/add.html.twig
@@ -1,33 +1,46 @@
 {%  extends 'layout/default.html.twig' %}
 {% block body %}
     <div class="container">
-        <h3>Dodawanie sali</h3>
-        <div class="login-form">
-            <form method="post" action="{{ path('hall_add') }}">
-                <div class="form-row">
-                    <div class="col-md-12 mb-3">
-                        <input type="text" name="name" class="form-control" placeholder="Nazwa" required="" />
-                    </div>
+        <div class="card">
+            <div class="card-header">
+                <h3>Dodawanie sali</h3>
+            </div>
+            <div class="card-body">
+                <div class="login-form">
+                    <form method="post" action="{{ path('hall_add') }}">
+                        <div class="form-row row">
+                            <label class="col-md-3" for="name">Nazwa</label>
+                            <div class="col-md-9 mb-3">
+                                <input type="text" name="name" class="form-control" placeholder="Nazwa" required="" />
+                            </div>
+                        </div>
+                        <div class="form-row row">
+                            <label class="col-md-3" for="name">Miasto</label>
+                            <div class="col-md-9 mb-3">
+                                <input type="text" name="city" class="form-control" placeholder="Miasto" required="" />
+                            </div>
+                        </div>
+                        <div class="form-row row">
+                            <label class="col-md-3" for="name">Adres</label>
+                            <div class="col-md-9 mb-3">
+                                <input type="text" name="address" class="form-control" placeholder="Adres" required="" />
+                            </div>
+                        </div>
+                        <div class="form-row row">
+                            <label class="col-md-3" for="name">Pole powierzchni</label>
+                            <div class="col-md-9 mb-3">
+                                <input type="text" name="area" class="form-control" placeholder="Pole powierzchni" required="" />
+                            </div>
+                        </div>
+                        <div class="form-footer">
+                            <button onclick="window.history.back();" class="btn btn-lg">
+                                Wstecz
+                            </button>
+                            <button class="btn btn-primary btn-lg" type="submit">Dodaj</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-row">
-                    <div class="col-md-12 mb-3">
-                        <input type="text" name="city" class="form-control" placeholder="Miasto" required="" />
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col-md-12 mb-3">
-                        <input type="text" name="address" class="form-control" placeholder="Adres" required="" />
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col-md-12 mb-3">
-                        <input type="text" name="area" class="form-control" placeholder="Pole powierzchni" required="" />
-                    </div>
-                </div>
-                <div class="form-footer">
-                    <button class="btn btn-primary btn-lg" type="submit">Dodaj</button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 {% endblock %}
