--- a/templates/halls/list.html.twig
+++ b/templates/halls/list.html.twig
@@ -10,6 +10,9 @@
                 <a href="{{ path('hall_add') }}" class="btn btn-success btn-lg">
                     Dodaj sale
                 </a>
+                <a href="{{ path('account') }}" class="btn btn-dark btn-lg">
+                    Wstecz
+                </a>
             </div>
             <table class="table table-borderless">
             <thead>
