--- a/templates/images/list.html.twig
+++ b/templates/images/list.html.twig
@@ -4,12 +4,16 @@
         <div class="card">
             <div class="card-header">
                 <h3>Zdjęcia sali "{{ hall.name }}"</h3>
+
             </div>
             <div class="card-body">
                 <div class="btn-group btn-group-toggle mb-2">
                     <a href="{{ path('image_add', {id: hall.id}) }}" class="btn btn-success btn-lg">
                         Dodaj zdjęcie
                     </a>
+                    <button onclick="window.history.back();" class="btn btn-lg">
+                        Wstecz
+                    </button>
                 </div>
                 <table class="table table-borderless">
                     <thead>
