--- a/templates/options/add.html.twig
+++ b/templates/options/add.html.twig
@@ -46,6 +46,9 @@
                             </div>
                         </div>
                         <div class="form-footer">
+                            <button onclick="window.history.back();" class="btn btn-lg">
+                                Wstecz
+                            </button>
                             <button class="btn btn-primary btn-lg" type="submit">
                                 {% if option %}
                                     Zapisz
