--- a/templates/prices/add.html.twig
+++ b/templates/prices/add.html.twig
@@ -33,6 +33,9 @@
                             </div>
                         </div>
                         <div class="form-footer">
+                            <button onclick="window.history.back();" class="btn btn-lg">
+                                Wstecz
+                            </button>
                             <button class="btn btn-primary btn-lg" type="submit">Dodaj</button>
                         </div>
                     </form>
