--- a/templates/prices/list.html.twig
+++ b/templates/prices/list.html.twig
@@ -10,6 +10,9 @@
                     <a href="{{ path('price_add', {id: hall.id}) }}" class="btn btn-success btn-lg">
                         Dodaj cene
                     </a>
+                    <a href="{{ path('account') }}" class="btn btn-dark btn-lg">
+                        Wstecz
+                    </a>
                 </div>
                 <table class="table table-borderless">
                     <thead>
