--- a/templates/staff/add.html.twig
+++ b/templates/staff/add.html.twig
@@ -78,13 +78,13 @@
                         </div>
 
                         <div class="form-row row">
-                            <label for="email" class="col-sm-2 col-form-label">Poczta</label>
+                            <label for="email" class="col-sm-2 col-form-label">E-mail</label>
                             <div class="col-md-10 mb-3">
                                 <input type="email"
                                        name="email"
                                        id="email"
                                        class="form-control"
-                                       placeholder="Poczta"
+                                       placeholder="E-mail"
                                        required=""
                                         {% if user %}
                                             value="{{ user.email }}"
@@ -184,6 +184,9 @@
                         </div>
 
                         <div class="form-footer">
+                            <button onclick="window.history.back();" class="btn btn-lg">
+                                Wstecz
+                            </button>
                             <button class="btn btn-primary btn-lg" type="submit">
                                 {% if user %}
                                     Zapisz
