--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -2,9 +2,11 @@
 {% block body %}
 <div class="container">
     <div class="card">
+        <div class="card-header">
+            <h4>Edycja konta</h4>
+        </div>
         <div class="card-body">
             <form method="post">
-                <h4>Edycja profilu</h4>
                 {% if msg is not null %}
                     <div class="alert alert-success" role="alert">
                         {{ msg }}
@@ -181,6 +183,9 @@
 
                 {% endif %}
                 <div class="form-footer">
+                    <button onclick="window.history.back();" class="btn btn-lg">
+                        Wstecz
+                    </button>
                     <button class="btn btn-primary btn-lg" type="submit">Zapisz</button>
                 </div>
             </form>
